--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,6 @@ name = "panicmsg"
 version = "0.1.0"
 edition = "2021"
 description = "A library for simplyifying common panic messages."
+repository = "https://github.com/ErisianArchitect/panicmsg"
+documentation = "https://docs.rs/panicmsg"
+license = "MIT"
